test/invalid-semantics/58196_wrong_number_of_arguments/wrong_number_of_arguments.mag
-- Author: 58196, Pedro Lopes

-- Cannot call function with an unexpected number of arguments

fun add (n, m) : (Int, Int) -> Int = n + m

fun main (_) : Unit -> Unit = print(add(1, 2, 3))
